feat: initial commit of PlentyCart Groceries project with core features and Docker setup

--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
 # Application Configuration
 PORT=4040
-MONGODB_URI=mongodb://localhost:27017/groceryDB
+# use url for docker to connect local mongo DB
+# MONGODB_URI=mongodb://host.docker.internal:27017/plentycart
+
+# use url for local mongo DB
+MONGODB_URI=mongodb://localhost:27017/plentycart
 NODE_ENV=development
+
 SESSION_SECRET=mysecretkey
 MAX_FILE_SIZE=5242880
 
 # Vite Configuration
-VITE_API_URL=http://localhost:3030/api  # Updated port for frontend
+VITE_API_URL=http://localhost:3030/api
