--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "concurrently": "^8.0.1",
     "nodemon": "^3.0.1",
     "sass": "^1.69.0",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "path": "^0.12.7"
   }
 }
